logs/Slang/generated/hdlconv/hdlconvertor_p737.sv.log
name: hdlconvertor_p737
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p737.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p737.sv:1:1: error: language feature not yet supported
class C ;
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p737.sv:3:13: error: language feature not yet supported
module M #( type T = C, T p = 4,
            ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p737.sv:3:22: error: use of undeclared identifier 'C'
module M #( type T = C, T p = 4,
                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p737.sv:3:25: error: 'T' is not a type
module M #( type T = C, T p = 4,
                        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p737.sv:4:1: error: language feature not yet supported
type T2, T2 p2 = 4
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p737.sv:4:10: error: 'T2' is not a type
type T2, T2 p2 = 4
         ^~
